# sorot

./: .gitignore  AGENTS.md  AGENTS2.md  Cargo.toml
bench/: agents.md
crates/antialias/: Cargo.toml
crates/antialias/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/bezier/: Cargo.toml
crates/bezier/src/: bezier.rs  lib.rs
crates/blend/: Cargo.toml
crates/blend/src/: blend.rs  blend_test.rs  lib.rs
crates/blur/: Cargo.toml
crates/blur/src/: blur.rs  lib.rs
crates/bsp/: Cargo.toml
crates/bsp/src/: bsp.rs  lib.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: canvas.rs  canvas_test.rs  lib.rs
crates/color/: Cargo.toml
crates/compositor/: Cargo.toml
crates/compositor/benches/: blend.rs
crates/displaylist/: Cargo.toml
crates/displaylist/src/: display_list.rs
crates/distancefield/: Cargo.toml
crates/distancefield/src/: lib.rs  sdf.rs  sdf_test.rs
crates/effect/: Cargo.toml
crates/effect/src/: effects.rs
crates/fixed/: Cargo.toml
crates/flatten/: Cargo.toml
crates/flatten/src/: flatten.rs  flatten_test.rs  lib.rs  stroke.rs
crates/geometrycache/: Cargo.toml
crates/geometrycache/src/: lib.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: lib.rs  render_target.rs  wgpu_backend.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: lib.rs  matrix.rs
crates/moment/: Cargo.toml
crates/moment/src/: lib.rs  moment.rs
crates/paint/: Cargo.toml
crates/paint/src/: lib.rs  paint.rs
crates/passgraph/: Cargo.toml
crates/passgraph/src/: lib.rs  pass.rs
crates/pathbuilder/: Cargo.toml
crates/pathbuilder/src/: path.rs  path_test.rs
crates/pathcache/: Cargo.toml
crates/pathcache/src/: cache.rs  cache_test.rs
crates/pathops/: Cargo.toml
crates/pathops/src/: lib.rs  pathops.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs  pipeline.rs  pipeline_test.rs
crates/quadtree/: Cargo.toml
crates/quadtree/src/: lib.rs  quadtree.rs
crates/raster/: Cargo.toml
crates/raster/benches/: raster.rs
crates/raster/src/: aa.rs  sdf.rs
crates/rect/: Cargo.toml
crates/rect/src/: lib.rs  rect.rs
crates/renderir/: Cargo.toml
crates/renderir/src/: render_ir.rs
crates/scanline/: Cargo.toml
crates/scanline/src/: scanline.rs  scanline_test.rs
crates/scene/: Cargo.toml
crates/scene/src/: geometry_cache.rs  lib.rs  pipeline.rs
crates/scenegraph/: Cargo.toml
crates/scenegraph/src/: graph.rs  graph_test.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: tiling.rs
crates/simd/: Cargo.toml
crates/simd/src/: lib.rs  simd.rs
crates/srAAA/: Cargo.toml
crates/srAAA/src/: aa.rs
crates/srbatching/: Cargo.toml
crates/srbatching/src/: lib.rs
crates/srbezier/: Cargo.toml
crates/srbezier/src/: bezier.rs  bezier_test.rs
crates/srblend/: Cargo.toml
crates/srblend/src/: blend.rs
crates/srcache/: Cargo.toml
crates/srcache/src/: cache.rs  cache_test.rs  lib.rs
crates/srcanvas/: Cargo.toml
crates/srcanvas/src/: canvas.rs  canvas_test.rs
crates/srcolor/: Cargo.toml
crates/srcompositor/: Cargo.toml
crates/srcompositor/benches/: blend.rs
crates/srcompositor/src/: blend.rs  effects.rs  effects_test.rs  lib.rs  simd.rs  simd_test.rs  surface.rs
crates/srcore/: Cargo.toml
crates/srcore/src/: color.rs  color_test.rs  lib.rs  renderer.rs  scene.rs  shape.rs  tile.rs  transform.rs
crates/srdisplaylist/: Cargo.toml
crates/srdisplaylist/src/: display_list.rs  lib.rs
crates/sreffect/: Cargo.toml
crates/sreffect/src/: effects.rs  lib.rs
crates/srfixed/: Cargo.toml
crates/srfixed/src/: lib.rs
crates/srflatten/: Cargo.toml
crates/srflatten/src/: flatten.rs  flatten_test.rs
crates/srgpu/: AGENTS.md  Cargo.toml
crates/srgpu/src/: atlas.rs  buffer.rs  context.rs  device.rs  lib.rs  pipeline.rs  texture.rs  wgpu_backend.rs
crates/srgraph/: Cargo.toml
crates/srgraph/src/: graph.rs  graph_test.rs
crates/srmath/: Cargo.toml
crates/srmatrix/: Cargo.toml
crates/srpaint/: Cargo.toml
crates/srpass/: Cargo.toml
crates/srpath/: Cargo.toml
crates/srraster/: Cargo.toml
crates/srraster/benches/: raster.rs
crates/srraster/src/: aa.rs  lib.rs  scanline.rs  scanline_test.rs  sdf.rs  triangulate.rs
crates/srrect/: Cargo.toml
crates/srrender/: Cargo.toml
crates/srrender/src/: render_ir.rs
crates/srruntime/: Cargo.toml
crates/srscanline/: Cargo.toml
crates/srscene/: Cargo.toml
crates/srscene/src/: canvas.rs  canvas_test.rs  display_list.rs  geometry_cache.rs  graph.rs  graph_test.rs  lib.rs  pipeline.rs  pipeline_test.rs
crates/srscheduler/: Cargo.toml
crates/srsdf/: Cargo.toml
crates/srshader/: Cargo.toml
crates/srsimd/: Cargo.toml
crates/srsurface/: Cargo.toml
crates/srtext/: Cargo.toml
crates/srtile/: Cargo.toml
crates/srtri/: Cargo.toml
crates/srvec2/: Cargo.toml
crates/surface/: Cargo.toml
crates/tile/: Cargo.toml
crates/tiling/: Cargo.toml
crates/triangulate/: Cargo.toml
crates/vector/: Cargo.toml
crates/winding/: Cargo.toml
crates/worker/: Cargo.toml
fuzz/: Cargo.toml  agents.md  fuzzcolor.rs  fuzzmatrix.rs  fuzzpath.rs
infra/bots/: AGENTS.md
modules/: AGENTS.md
snapshots/: agents.md
sorot/: Cargo.toml
sorot-compositor/: Cargo.toml
sorot-compositor/benches/: blend.rs
sorot-compositor/src/: blend.rs  effects.rs  lib.rs  simd.rs  surface.rs
sorot-core/: Cargo.toml
sorot-core/src/: color.rs  lib.rs  math.rs  paint.rs  transform.rs
sorot-gpu/: Cargo.toml
sorot-gpu/src/: backend.rs  lib.rs  pass.rs  sdf.rs  wgpu_backend.rs
sorot-path/: Cargo.toml
sorot-path/src/: bezier.rs  cache.rs  flatten.rs  lib.rs  path.rs  sdf.rs
sorot-raster/: Cargo.toml
sorot-raster/benches/: raster.rs
sorot-raster/src/: aa.rs  lib.rs  scanline.rs  sdf.rs  tile.rs  triangulate.rs
sorot-render/: Cargo.toml
sorot-render/src/: lib.rs  render_ir.rs
sorot-scene/: Cargo.toml
sorot-scene/src/: canvas.rs  display_list.rs  geometry_cache.rs  graph.rs  lib.rs  pipeline.rs  render_ir.rs
sorot-scheduler/: Cargo.toml
sorot-scheduler/src/: lib.rs  tiling.rs
sorot/src/: main.rs  scene.rs
tests/: AGENTS.md
(+65 files in other folders)
