[workspace]
members = [
    "sorot",
    "crates/srcore",
    "crates/srpath",
    "crates/srraster",
    "crates/srcompositor",
    "crates/srrender",
    "crates/srscene",
    "crates/srgpu",
    "crates/srscheduler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
criterion = "0.5"
