[workspace]
members = [
    "sorot",
    "crates/srvec2",
    "crates/srrect",
    "crates/srmatrix",
    "crates/srfixed",
    "crates/srcolor",
    "crates/srpaint",
    "crates/srpath",
    "crates/srbezier",
    "crates/srflatten",
    "crates/srsdf",
    "crates/srcache",
    "crates/srAAA",
    "crates/srtile",
    "crates/srscanline",
    "crates/srtri",
    "crates/srblend",
    "crates/srsurface",
    "crates/srgraph",
    "crates/srcanvas",
    "crates/srpass",
    "crates/srraster",
    "crates/srcompositor",
    "crates/srrender",
    "crates/srscene",
    "crates/srgpu",
    "crates/srscheduler",
    "fuzz",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
criterion = "0.5"
