[workspace]
members = [
    "sorot",
    "crates/vector",
    "crates/rect",
    "crates/matrix",
    "crates/fixed",
    "crates/color",
    "crates/paint",
    "crates/pathbuilder",
    "crates/bezier",
    "crates/flatten",
    "crates/distancefield",
    "crates/pathcache",
    "crates/antialias",
    "crates/tile",
    "crates/scanline",
    "crates/triangulate",
    "crates/blend",
    "crates/surface",
    "crates/effect",
    "crates/simd",
    "crates/scenegraph",
    "crates/canvas",
    "crates/displaylist",
    "crates/passgraph",
    "crates/renderir",
    "crates/raster",
    "crates/gpu",
    "crates/scene",
    "crates/scheduler",
    "crates/compositor",
    "crates/geometrycache",
    "crates/pipeline",
    "crates/worker",
    "crates/tiling",
    "fuzz",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
criterion = "0.5"
