[package]
name = "sorotfuzz"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

srvec2 = { path = "../crates/srvec2" }
srmatrix = { path = "../crates/srmatrix" }
srcolor = { path = "../crates/srcolor" }
srpath = { path = "../crates/srpath" }
srflatten = { path = "../crates/srflatten" }
srblend = { path = "../crates/srblend" }

[[bin]]
name = "fuzzmatrix"
path = "fuzzmatrix.rs"
test = false
doc = false

[[bin]]
name = "fuzzpath"
path = "fuzzpath.rs"
test = false
doc = false

[[bin]]
name = "fuzzcolor"
path = "fuzzcolor.rs"
test = false
doc = false
