[package]
name = "sorotfuzz"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

vector = { path = "../crates/vector" }
matrix = { path = "../crates/matrix" }
color = { path = "../crates/color" }
pathbuilder = { path = "../crates/pathbuilder" }
flatten = { path = "../crates/flatten" }
blend = { path = "../crates/blend" }

[[bin]]
name = "fuzzmatrix"
path = "fuzzmatrix.rs"
test = false
doc = false

[[bin]]
name = "fuzzpath"
path = "fuzzpath.rs"
test = false
doc = false

[[bin]]
name = "fuzzcolor"
path = "fuzzcolor.rs"
test = false
doc = false
