[package]
name = "sorot-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sorot-core = { path = "../sorot-core" }
sorot-raster = { path = "../sorot-raster" }
sorot-compositor = { path = "../sorot-compositor" }
wgpu = "24"
winit = "0.30"
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
