[package]
name = "sorot-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sorot-core = { path = "../sorot-core" }
sorot-path = { path = "../sorot-path" }
sorot-raster = { path = "../sorot-raster" }
sorot-scene = { path = "../sorot-scene" }
wgpu = "24"
winit = "0.30"
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
