[package]
name = "sorot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
srcore = { path = "../crates/srcore" }
srraster = { path = "../crates/srraster" }
srgpu = { path = "../crates/srgpu" }
srscene = { path = "../crates/srscene" }
srrender = { path = "../crates/srrender" }
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"
