[package]
name = "sorot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vector = { path = "../crates/vector" }
rect = { path = "../crates/rect" }
matrix = { path = "../crates/matrix" }
color = { path = "../crates/color" }
paint = { path = "../crates/paint" }
pathbuilder = { path = "../crates/pathbuilder" }
flatten = { path = "../crates/flatten" }
raster = { path = "../crates/raster" }
gpu = { path = "../crates/gpu" }
renderir = { path = "../crates/renderir" }
canvas = { path = "../crates/canvas" }
scenegraph = { path = "../crates/scenegraph" }
pipeline = { path = "../crates/pipeline" }
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"
