[package]
name = "raster"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vector = { path = "../vector" }
rect = { path = "../rect" }
matrix = { path = "../matrix" }
fixed = { path = "../fixed" }
color = { path = "../color" }
pathbuilder = { path = "../pathbuilder" }
bezier = { path = "../bezier" }
flatten = { path = "../flatten" }
distancefield = { path = "../distancefield" }
