[package]
name = "renderir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vector = { path = "../vector" }
rect = { path = "../rect" }
matrix = { path = "../matrix" }
color = { path = "../color" }
paint = { path = "../paint" }
blend = { path = "../blend" }
