[package]
name = "srcompositor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
srvec2 = { path = "../srvec2" }
srcolor = { path = "../srcolor" }
srsurface = { path = "../srsurface" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "blend"
harness = false
