[package]
name = "srgraph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
srvec2 = { path = "../srvec2" }
srrect = { path = "../srrect" }
srmatrix = { path = "../srmatrix" }
srcolor = { path = "../srcolor" }
srpaint = { path = "../srpaint" }
srpath = { path = "../srpath" }
srbezier = { path = "../srbezier" }
srflatten = { path = "../srflatten" }
srtri = { path = "../srtri" }
