[package]
name = "srraster"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
srvec2 = { path = "../srvec2" }
srrect = { path = "../srrect" }
srmatrix = { path = "../srmatrix" }
srfixed = { path = "../srfixed" }
srcolor = { path = "../srcolor" }
srpath = { path = "../srpath" }
srbezier = { path = "../srbezier" }
srflatten = { path = "../srflatten" }
srsdf = { path = "../srsdf" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "raster"
harness = false
