[package]
name = "srrender"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
srvec2 = { path = "../srvec2" }
srrect = { path = "../srrect" }
srmatrix = { path = "../srmatrix" }
srcolor = { path = "../srcolor" }
srpaint = { path = "../srpaint" }
srblend = { path = "../srblend" }
